--- a/.ipynb_checkpoints (1)/pythonPractice-checkpoint.ipynb
+++ b/.ipynb_checkpoints (1)/pythonPractice-checkpoint.ipynb
@@ -1119,8 +1119,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Dutch']\n",
+      "['4', '7', '9', '5', '0', '1', '8', '7', '0', '2', '0', '9', '2', '1', '3', '6', '5', '0']\n",
+      "['boo', 'loo']\n"
+     ]
+    }
+   ],
    "source": [
     "\"Regular Expression Exercise\"\n",
     "\n",
@@ -1147,145 +1159,8 @@
     "sentence = \"The ghost that says boo haunts the loo\"\n",
     "\n",
     "match3 = re.findall('.[o]o', sentence)\n",
-    "print(match3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['y', 'e', 's', 't', 'e', 'r', 'd', 'a', 'y']\n",
-      "yadretsey\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[5, 4, 3, 2, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Data Structure Exercise\n",
-    "\n",
-    "Stack: LIFO\n",
-    "\n",
-    "Queue: FIFO\n",
-    "\"\"\"\n",
-    "\n",
-    "class Stack:\n",
-    "    def __init__(self):\n",
-    "        self.items = []\n",
-    "\n",
-    "    def is_empty(self):\n",
-    "        return self.items == []\n",
-    "\n",
-    "    def push(self, item):\n",
-    "        self.items.append(item)\n",
-    "\n",
-    "    def pop(self):\n",
-    "        return self.items.pop()\n",
-    "\n",
-    "    def peek(self):\n",
-    "        last = len(self.items)-1\n",
-    "        return self.items[last]\n",
-    "\n",
-    "    def size(self):\n",
-    "        return len(self.items)\n",
-    "    \n",
-    "class Queue:\n",
-    "   def __init__(self):\n",
-    "       self.items = []\n",
-    "\n",
-    "\n",
-    "   def is_empty(self):\n",
-    "       return self.items == []\n",
-    "\n",
-    "\n",
-    "   def enqueue(self, item):\n",
-    "       self.items.insert(0, item)\n",
-    "\n",
-    "\n",
-    "   def dequeue(self):\n",
-    "       return self.items.pop()\n",
-    "\n",
-    "\n",
-    "   def size(self):\n",
-    "       return len(self.items)\n",
-    "\n",
-    "\n",
-    "#============Problem 1=============\n",
-    "stack=Stack()\n",
-    "\n",
-    "for i in \"yesterday\":\n",
-    "    stack.push(i)\n",
-    "print(stack.items)\n",
-    "\n",
-    "reverse_str = \"\"\n",
-    "for i in range(stack.size()):\n",
-    "    reverse_str+=stack.pop()\n",
-    "print(reverse_str)\n",
-    "\n",
-    "#============Problem 2=============\n",
-    "stack2=Stack()\n",
-    "\n",
-    "ls = [1, 2, 3, 4, 5]\n",
-    "rev_ls = []\n",
-    "\n",
-    "for i in ls:\n",
-    "    stack2.push(i)\n",
-    "print(stack2.items)\n",
-    "\n",
-    "for i in range(stack2.size()):\n",
-    "    rev_ls.append(stack2.pop())\n",
-    "print(rev_ls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Steven', 'dad'), ('Ye', 'mom'), ('Baymax', 'son')]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Steven', 'dad'), ('Baymax', 'son')]"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"Combine Two Lists with zip funtion\"\"\"\n",
-    "name=[\"Steven\", \"Ye\", \"Baymax\"]\n",
-    "role=[\"dad\", \"mom\", \"son\"]\n",
-    "family=[]\n",
-    "for i in zip(name, role):\n",
-    "    family.append(i)\n",
-    "print(family)\n",
-    "family[0][0]\n",
-    "family[::-1]\n",
-    "family[::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"Anagram detection\"\"\"\n"
+    "print(match3)\n",
+    "\n"
    ]
   }
  ],
