--- a/pythonPractice.ipynb
+++ b/pythonPractice.ipynb
@@ -1280,13 +1280,167 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\"\"\"\n",
+    "Anagram detection\n",
+    "\n",
+    "Two words are anagram of each other if they consist of \n",
+    "the exact same components of characters. \n",
+    "\n",
+    "To check if two words are anagram, \n",
+    "    1. len(word_1)==len(word_2)\n",
+    "    2. sort(word_1)==sort(word_2)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sad mother duck went out one day.        \n",
+      "Over the hill and far away.        \n",
+      "The sad mother duck said “Quack, quack, quack,”\n",
+      "And none of those little ducks came back.\n",
+      "\n",
+      "Sad mother duck went out one day.        \n",
+      "Over the hill and far away.        \n",
+      "The sad mother duck said “Quack, quack, quack,”\n",
+      "And only 1 little duck(s) came back.\n",
+      "\n",
+      "Sad mother duck went out one day.        \n",
+      "Over the hill and far away.        \n",
+      "The sad mother duck said “Quack, quack, quack,”\n",
+      "And only 2 little duck(s) came back.\n",
+      "\n",
+      "Sad mother duck went out one day.        \n",
+      "Over the hill and far away.        \n",
+      "The sad mother duck said “Quack, quack, quack,”\n",
+      "And only 3 little duck(s) came back.\n",
+      "\n",
+      "Sad mother duck went out one day.        \n",
+      "Over the hill and far away.        \n",
+      "The sad mother duck said “Quack, quack, quack,”\n",
+      "And all of the 4 little ducks came back.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Recursion\n",
+    "\n",
+    "A method to solve a problem by breaking it down \n",
+    "to smaller pieces that are much easier to solve.\n",
+    "\n",
+    "In programming, recursive algorithm relies on the repetition \n",
+    "of a function within itself until the algorithm satisfies the \n",
+    "base case. With that being said, a recursive algorithm \n",
+    "is often written inside a function. The function will \n",
+    "then call itself until it meets the base csse.\n",
+    "\n",
+    "Base case is the condition(s) set to end the recursive \n",
+    "algorithm to prevent it from running forever.\n",
+    "\n",
+    "Three laws of recursion:\n",
+    "    1. must have a base case\n",
+    "    2. must change its state and move toward the base case\n",
+    "    3. must repeat itself \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "#============Example=============\n",
+    "def bottles_of_beer(bob):\n",
+    "    if bob < 1:\n",
+    "        print(\"\"\"No more bottles of beer on the wall. No more \n",
+    "                 bottles of beer.\"\"\")\n",
+    "        return\n",
+    "    tmp = bob\n",
+    "    bob -= 1\n",
+    "    print(\"\"\"{} bottles of beer on the wall. {} bottles\n",
+    "             of beer. Take one down, pass it around, \n",
+    "             {} bottles of beer on the wall.\"\"\".format(tmp, tmp, bob))\n",
+    "    bottles_of_beer(bob)\n",
+    "    \n",
+    "#============Problem=============\n",
+    "\"My recursive function: Lyrics to the Five little ducks\"\n",
+    "\n",
+    "def five_lil_ducks(left_duck=5, back_duck=0):\n",
+    "    print('\\nSad mother duck went out one day.\\\n",
+    "        \\nOver the hill and far away.\\\n",
+    "        \\nThe sad mother duck said “Quack, quack, quack,”')\n",
+    "    if back_duck==0:\n",
+    "        print(\"And none of those little ducks came back.\")\n",
+    "    if back_duck!=0 and back_duck!=left_duck:\n",
+    "        print(\"And only {} little duck(s) came back.\"\\\n",
+    "         .format(back_duck))\n",
+    "    if left_duck==back_duck:\n",
+    "        print(\"And all of the {} little ducks came back.\"\\\n",
+    "             .format(back_duck))\n",
+    "        return \n",
+    "    back_duck+=1\n",
+    "    five_lil_ducks(left_duck, back_duck)\n",
+    "        \n",
+    "five_lil_ducks(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "find_unique.py\n",
+    "\n",
+    "Author: Ye N.E.\n",
+    "\n",
+    "Description: Given a non-empty list of integers, \n",
+    "            every element appears twice except for one. \n",
+    "            Find that single one.\n",
+    "\"\"\"\n",
+    "\n",
+    "def find_unique(ls):\n",
+    "    dup=[]\n",
+    "    a_set=set()\n",
+    "    for i in ls:\n",
+    "        length_1=len(a_set)\n",
+    "        a_set.add(i)\n",
+    "        length_2=len(a_set)\n",
+    "        if length_1==length_2:\n",
+    "            dup.append(i)\n",
+    "    for j in ls:\n",
+    "        if j not in dup:\n",
+    "            return j\n",
+    "        \n",
+    "ls = [1 , 2, 3, 1, 3, 4, 5, 1, 4, 5]\n",
+    "find_unique(ls)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"Anagram detection\"\"\"\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
