adding WebScraper section

--- a/pythonPractice.ipynb
+++ b/pythonPractice.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +328,16 @@
      "text": [
       "19.1216498435166\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, World'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -344,12 +354,35 @@
     "    list.append(i)\n",
     "    \n",
     "harmonicMean = stat.harmonic_mean(list)\n",
-    "print(harmonicMean)"
+    "print(harmonicMean)\n",
+    "\n",
+    "#========MORE Info==========\n",
+    "\"\"\"\n",
+    "\n",
+    "For Python distributed by Anaconda, \n",
+    "to access to custom modules from anywhere within the \n",
+    "Python environment, \n",
+    "write and save the custom modules to the site-packages directory\n",
+    "of Anaconda package. \n",
+    "For example, the directory to the site-packages in my local machine \n",
+    "has the following path:\n",
+    "/Users/yennguyen/anaconda3/lib/python3.6/site-packages\n",
+    "\n",
+    "In this directory, I have already written the module named 'hello.py'.\n",
+    "Now I can access this module from any working directory I am in while \n",
+    "running the Python environment. \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "import hello\n",
+    "\n",
+    "\n",
+    "hello.my_fun()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -359,8 +392,8 @@
       "def cube(x):\n",
       "    return x**3\n",
       "\n",
-      "What's your name?Ye\n",
-      "Ye\n"
+      "What's your name? ye\n",
+      "ye\n"
      ]
     }
    ],
@@ -373,7 +406,7 @@
     "import os \n",
     "os.getcwd()\n",
     "os.listdir()\n",
-    "os.chdir('/Users/yennguyen/Google Drive/Five-week Coder/module/')\n",
+    "os.chdir('/Users/yennguyen/GDrive/FiveWeekCoder/FiveWeekCoderExercise/module')\n",
     "os.getcwd()\n",
     "os.listdir()\n",
     "\n",
@@ -383,7 +416,7 @@
     "#========Prob.2==========\n",
     "os.getcwd()\n",
     "\n",
-    "name=input('What\\'s your name?')\n",
+    "name=input('What\\'s your name? ')\n",
     "with open('files.txt', 'w+') as f2:\n",
     "    f2.write(name)\n",
     "    \n",
@@ -1433,6 +1466,134 @@
     "ls = [1 , 2, 3, 1, 3, 4, 5, 1, 4, 5]\n",
     "find_unique(ls)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "import tmdbsimple as tmd\n",
+    "import sys\n",
+    "\n",
+    "#print(sys.path)\n",
+    "\n",
+    "tmd.API_KEY = tmd.Key()\n",
+    "movie = tmd.Movies(41210)\n",
+    "response = movie.info()\n",
+    "print(movie.title)\n",
+    "#print(response)\n",
+    "\n",
+    "search = tmd.Search()\n",
+    "response = search.movie(query='The Switch')\n",
+    "for s in search.results:\n",
+    "    #print(s)\n",
+    "    print(s['title'], s['id'], s['release_date'], s['popularity'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "https://www.google.com/intl/en/about/products\n",
+      "\n",
+      "https://myaccount.google.com/?utm_source=OGB&utm_medium=app\n",
+      "\n",
+      "https://www.google.com/webhp\n",
+      "\n",
+      "https://maps.google.com/maps?hl=en\n",
+      "\n",
+      "https://www.youtube.com/?gl=US\n",
+      "\n",
+      "https://play.google.com/?hl=en\n",
+      "\n",
+      "https://news.google.com/nwshp?hl=en\n",
+      "\n",
+      "https://mail.google.com/mail/\n",
+      "\n",
+      "https://contacts.google.com/?hl=en\n",
+      "\n",
+      "https://drive.google.com/\n",
+      "\n",
+      "https://www.google.com/calendar\n",
+      "\n",
+      "https://translate.google.com/?hl=en\n",
+      "\n",
+      "https://photos.google.com/?pageId=none\n",
+      "\n",
+      "https://www.google.com/shopping?hl=en&source=og\n",
+      "\n",
+      "https://www.google.com/intl/en/about/products\n",
+      "\n",
+      "https://www.google.com/finance\n",
+      "\n",
+      "https://docs.google.com/document/?usp=docs_alc\n",
+      "\n",
+      "https://books.google.com/bkshp?hl=en\n",
+      "\n",
+      "https://www.blogger.com/\n",
+      "\n",
+      "https://duo.google.com/?usp=duo_ald\n",
+      "\n",
+      "https://hangouts.google.com/\n",
+      "\n",
+      "https://keep.google.com/\n",
+      "\n",
+      "https://jamboard.google.com/?usp=jam_ald\n",
+      "\n",
+      "https://www.google.com/save\n",
+      "\n",
+      "https://www.google.com/intl/en/about/products\n",
+      "\n",
+      "https://accounts.google.com/ServiceLogin?passive=1209600&continue=https://news.google.com/?hl%3Den-US%26gl%3DUS%26ceid%3DUS:en&followup=https://news.google.com/?hl%3Den-US%26gl%3DUS%26ceid%3DUS:en&hl=en-US\n",
+      "\n",
+      "https://play.google.com/store/apps/details?id=com.google.android.apps.magazines&referrer=news.google.com?utm_source=web&utm_medium=menu&utm_campaign=side_menu_promotion\n",
+      "\n",
+      "https://itunes.apple.com/US/app/apple-store/id459182288?pt=9008&ct=Web%20Side%20Promotion&mt=8&l=en-US\n",
+      "\n",
+      "https://support.google.com/googlenews?p=web&hl=en-US&authuser=0\n",
+      "\n",
+      "https://www.google.com/producer/app/privacy\n",
+      "\n",
+      "https://www.google.com/producer/app/tos\n",
+      "\n",
+      "https://www.google.com/about\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"Web Scraper\"\n",
+    "\n",
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
+    "class Scraper:\n",
+    "    def __init__(self, site):\n",
+    "        self.site = site\n",
+    "\n",
+    "    def scrape(self):\n",
+    "        r = urllib.request.urlopen(self.site)\n",
+    "        html = r.read()\n",
+    "        parser = \"html.parser\"\n",
+    "        sp = BeautifulSoup(html, parser)\n",
+    "        for tag in sp.find_all(\"a\"):\n",
+    "            url = tag.get(\"href\")\n",
+    "            #print(\"\\n {}\".format(url))\n",
+    "            if url is None:\n",
+    "                continue\n",
+    "            if \"http\" in url:\n",
+    "                print(\"\\n\" + url)\n",
+    "            \n",
+    "\n",
+    "\n",
+    "news = 'http://news.google.com/'\n",
+    "Scraper(news).scrape()"
    ]
   },
   {
